src/FinancialForce Accounting/objects/codaBankReconciliation__c.object
<CustomObject>
    <customHelpPage>codahelpbankreconciliation</customHelpPage>
    <description>Stores the master details of a bank reconciliation.</description>
    <fields>
        <fullName>BankAccountCurrency__c</fullName>
        <formula>BankAccount__r.BankAccountCurrency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankAccountNumber__c</fullName>
        <formula>BankAccount__r.AccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Bank Reconciliations</relationshipLabel>
        <relationshipName>Reconciliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankChargesAndInterest__c</fullName>
        <formula>InterestReceived__c + InterestPaid__c + BankCharges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Charges and Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BankCharges__c</fullName>
        <label>Bank Charges</label>
        <summarizedField>codaBankReconciliationCharge__c.Value__c</summarizedField>
        <summaryFilterItems>
            <field>codaBankReconciliationCharge__c.Type__c</field>
            <operation>equals</operation>
            <value>Bank Charges</value>
        </summaryFilterItems>
        <summaryForeignKey>codaBankReconciliationCharge__c.BankReconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ClearedBalance__c</fullName>
        <formula>OpeningBalance__c + TotalReconciled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cleared Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClosingBalance__c</fullName>
        <label>Closing Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Difference__c</fullName>
        <formula>ClosingBalance__c - ClearedBalance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InterestPaid__c</fullName>
        <label>Interest Paid</label>
        <summarizedField>codaBankReconciliationCharge__c.Value__c</summarizedField>
        <summaryFilterItems>
            <field>codaBankReconciliationCharge__c.Type__c</field>
            <operation>equals</operation>
            <value>Interest Paid</value>
        </summaryFilterItems>
        <summaryForeignKey>codaBankReconciliationCharge__c.BankReconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>InterestReceived__c</fullName>
        <label>Interest Received</label>
        <summarizedField>codaBankReconciliationCharge__c.Value__c</summarizedField>
        <summaryFilterItems>
            <field>codaBankReconciliationCharge__c.Type__c</field>
            <operation>equals</operation>
            <value>Interest Received</value>
        </summaryFilterItems>
        <summaryForeignKey>codaBankReconciliationCharge__c.BankReconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OpeningBalance__c</fullName>
        <formula>PreviousReconciliation__r.ClosingBalance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Bank Reconciliations</relationshipLabel>
        <relationshipName>Reconciliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreviousReconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Reconciliation</label>
        <referenceTo>codaBankReconciliation__c</referenceTo>
        <relationshipLabel>Reconciliations</relationshipLabel>
        <relationshipName>Reconciliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReconciledItems__c</fullName>
        <label>Reconciled Items</label>
        <summarizedField>codaBankReconciliationLineItem__c.Value__c</summarizedField>
        <summaryForeignKey>codaBankReconciliationLineItem__c.BankReconciliation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ReconciliationStatus__c</fullName>
        <label>Reconciliation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatementDate__c</fullName>
        <label>Statement Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalReconciled__c</fullName>
        <formula>ReconciledItems__c + BankChargesAndInterest__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Reconciled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bank Reconciliation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BankAccount__c</columns>
        <columns>BankAccountCurrency__c</columns>
        <columns>BankAccountNumber__c</columns>
        <columns>ClosingBalance__c</columns>
        <columns>OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Reconciliation Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Reconciliations</pluralLabel>
    <recordTypes>
        <fullName>Uncontrolled</fullName>
        <active>true</active>
        <label>Uncontrolled</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>